# Tokenizer

./: CMakeLists.txt
examples/: CMakeLists.txt  tokenize_example.c  tokenize_file.c
include/jtok/: tokenizer.h
src/: tokenizer.c
tests/: CMakeLists.txt  test_tokenizer.c
